correct package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "digest",
+	"name": "polyvitamins.digest",
 	"repository": "http://github.com/polyvitamins/digest",
   "description": "Digest class",
   "version": "0.0.1",
